Added Matrix + extended it by serialization + ported MartrixArray + ported tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,13 @@
-# Check compiler flags
-#include(CheckCXXCompilerFlag)
-
 # Include current dir
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 
 # =======================================================================
 # Add subdirectories
 # =======================================================================
+
+add_subdirectory(types2)
 
 add_subdirectory(test)
