Matrix & MatrixArray simple unit tests + (not working?) integration (optional) with OpenBLAS

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -9,42 +9,17 @@ set(BUILD_TEST_MATRIX ON CACHE BOOL "Build the application for testing matrix mu
 
 if(${BUILD_TEST_MATRIX})
 	# Create exeutable.
-	ADD_EXECUTABLE(matrix_test matrix_test.cpp)
+	ADD_EXECUTABLE(matrixSpeedTest matrixSpeedTest.cpp)
 	# Link it with shared libraries.
-	target_link_libraries(matrix_test 
-#		types
+	if(OpenBLAS_FOUND)
+		target_link_libraries(matrixSpeedTest  ${OpenBLAS_LIB} )
+	endif(OpenBLAS_FOUND)
+	target_link_libraries(matrixSpeedTest 
 		${Boost_LIBRARIES}
 		${ARMADILLO_LIBRARIES} 
 		)
-#	if(OpenBLAS_FOUND)
-#		target_link_libraries(matrix_test  ${OpenBLAS_LIB} )
-#		endif(OpenBLAS_FOUND)
 
 	# install test to bin directory
-	install(TARGETS matrix_test RUNTIME DESTINATION bin)
+	install(TARGETS matrixSpeedTest RUNTIME DESTINATION bin)
 
 endif(${BUILD_TEST_MATRIX})
-
-
-# =======================================================================
-# Build and install - matrix array test.
-# =======================================================================
-
-set(BUILD_TEST_MATRIX_ARRAY ON CACHE BOOL "Build the application for testing creation/serialization of matrix array class")
-
-if(${BUILD_TEST_MATRIX_ARRAY})
-	# Create exeutable.
-	ADD_EXECUTABLE(matrix_array_test matrix_array_test.cpp)
-	# Link it with shared libraries.
-	target_link_libraries(matrix_array_test
-		configuration
-		types
-		data_io
-		${Boost_LIBRARIES}
-		${ARMADILLO_LIBRARIES} 
-		)
-
-	# install test to bin directory
-	install(TARGETS matrix_array_test RUNTIME DESTINATION bin)
-
-endif(${BUILD_TEST_MATRIX_ARRAY})
