--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: cpp
 
 matrix:
   include:
+    ############################################################################
+    # Ubuntu 14.04 Trusty gcc
+    ############################################################################
     - os: linux
       dist: trusty
       sudo: required
@@ -21,6 +24,11 @@ matrix:
         - sudo make
         - sudo cp *.a /usr/lib
         - cd $DIR
+
+
+############################################################################
+# Common (i.e. system independent) part 
+############################################################################
 
 before_script:
   - mkdir build
