Travis 2 os test 5 adding osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ matrix:
         - sudo make
         - sudo cp *.a /usr/lib
         - cd $DIR
+    - os: osx
+      osx_image: xcode8.1
+      compiler: clang
 
 
 ############################################################################
