Travis test 8 removed matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,32 @@
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-      language: cpp
-      compiler: gcc
-      addons:
-        apt:
-          packages:
-            - libboost-all-dev
-            - libarmadillo-dev
-            - libopenblas-dev
-      install:
-        # Fix GTest problem with symbolic links 
-        - DIR=$(pwd)
-        - sudo apt-get install libgtest-dev
-        - cd /usr/src/gtest
-        - sudo cmake CMakeLists.txt
-        - sudo make
-        - sudo cp *.a /usr/lib
-        - cd $DIR
-      before_script:
-        - mkdir build
-        - cd build
-        - cmake ..
-      script:
-        - make -j4
-        - src/types2/matrixTestsRunner
-        - src/types2/matrixArrayTestsRunner
+os: linux
+dist: trusty
+sudo: required
+language: cpp
+compiler: gcc
+
+addons:
+  apt:
+    packages:
+      - libboost-all-dev
+      - libarmadillo-dev
+      - libopenblas-dev
+
+install:
+  # Fix GTest problem with symbolic links 
+  - DIR=$(pwd)
+  - sudo apt-get install libgtest-dev
+  - cd /usr/src/gtest
+  - sudo cmake CMakeLists.txt
+  - sudo make
+  - sudo cp *.a /usr/lib
+  - cd $DIR
+
+before_script:
+  - mkdir build
+  - cd build
+  - cmake ..
+
+script:
+  - make -j4
+  - src/types2/matrixTestsRunner
+  - src/types2/matrixArrayTestsRunner
