Ported optimization from gtest-sandbox

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,5 @@ script:
   - make -j4
   - src/types2/matrixTestsRunner
   - src/types2/matrixArrayTestsRunner
+  - src/optimization/artificialLandscapesTestsRunner
+  - src/optimization/optimizationFunctionsTestsRunner
