--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,4 +10,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(types2)
 
+add_subdirectory(optimization)
+
 add_subdirectory(test)
