added unit tests of loss and FC layer to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,10 @@ before_script:
   - cmake ..
 
 script:
-  - make -j4
+  - make -j8
   - src/types2/matrixTestsRunner
   - src/types2/matrixArrayTestsRunner
   - src/optimization/artificialLandscapesTestsRunner
   - src/optimization/optimizationFunctionsTestsRunner
+  - src/loss/lossTestsRunner
+  - src/feed_forward/fully_connected/FullyConnectedLayerTestsRunner
