Refactored loss and fully connected layer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(optimization)
 
-#add_subdirectory(loss)
+add_subdirectory(loss)
 
-#add_subdirectory(feed_forward)
+add_subdirectory(feed_forward)
