--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,18 @@ matrix:
       - chmod +x generateDocumentationAndDeploy.sh
       - ./generateDocumentationAndDeploy.sh
 
+   # 3. Ubuntu 14.04 clang++
+    - os: linux
+      dist: trusty
+      compiler: clang
+      env:
+        - OS=Ubuntu-14.04
+        - COMPILER=clang++
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
+          packages: ['libboost-all-dev', 'libeigen3-dev', 'libarmadillo-dev', 'libhdf5-dev']
+
 # Configure cmake and prepare installation dir.
 before_script:
   # Make mic output
