Working mlnn sample + batch test examples

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -2,6 +2,31 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # =======================================================================
+# Build and install - mlnn sample test.
+# =======================================================================
+
+set(BUILD_TEST_SAMPLE_TRAINING_MLNN ON CACHE BOOL "Build the application for testing of training of a multi-layer neural network")
+
+if(${BUILD_TEST_SAMPLE_TRAINING_MLNN})
+	# Create exeutable.
+	ADD_EXECUTABLE(mlnn_sample_training_test mlnn_sample_training_test.cpp)
+	# Link it with shared libraries.
+	target_link_libraries(mlnn_sample_training_test 
+	    logger
+		configuration
+		types
+		data_io
+		mlnn
+		${Boost_LIBRARIES}
+		)
+
+	# install test to bin directory
+	install(TARGETS mlnn_sample_training_test RUNTIME DESTINATION bin)
+
+endif(${BUILD_TEST_SAMPLE_TRAINING_MLNN})
+
+
+# =======================================================================
 # Build and install - mlnn batch training test.
 # =======================================================================
 
@@ -16,6 +41,7 @@ if(${BUILD_TEST_BATCH_TRAINING_MLNN})
 		configuration
 		types
 		data_io
+		encoders
 		mlnn
 		${Boost_LIBRARIES}
 		)
@@ -25,29 +51,6 @@ if(${BUILD_TEST_BATCH_TRAINING_MLNN})
 
 endif(${BUILD_TEST_BATCH_TRAINING_MLNN})
 
-# =======================================================================
-# Build and install - mlnn test.
-# =======================================================================
-
-set(BUILD_TEST_MLNN ON CACHE BOOL "Build the application for testing creation/serialization of multi-layer neural networks")
-
-if(${BUILD_TEST_MLNN})
-	# Create exeutable.
-	ADD_EXECUTABLE(mlnn_test mlnn_test.cpp)
-	# Link it with shared libraries.
-	target_link_libraries(mlnn_test 
-	    logger
-		configuration
-		types
-		data_io
-		mlnn
-		${Boost_LIBRARIES}
-		)
-
-	# install test to bin directory
-	install(TARGETS mlnn_test RUNTIME DESTINATION bin)
-
-endif(${BUILD_TEST_MLNN})
 
 # =======================================================================
 # Build and install - MNIST recognition based on CNNs.
@@ -79,16 +82,16 @@ endif(${BUILD_MNIST_CNN_APP})
 
 
 # =======================================================================
-# Build and install -  MNIST recognition based on MLP.
+# Build and install -  MNIST recognition based on MLNN.
 # =======================================================================
 
-set(BUILD_MNIST_MLP_APP ON CACHE BOOL "Build the application using Multi-Layer Perceptron for recognition of MNIST digits")
+set(BUILD_MNIST_MLP_APP ON CACHE BOOL "Build the application using a simple multi-Layer neural net for recognition of MNIST digits")
 
 if(${BUILD_MNIST_MLP_APP})
         # Create exeutable.
-        ADD_EXECUTABLE(mnist_simple_mlp_app mnist_simple_mlp.cpp)
+        ADD_EXECUTABLE(mnist_simple_mlnn_app mnist_simple_mlnn.cpp)
         # Link it with shared libraries.
-        target_link_libraries(mnist_simple_mlp_app
+        target_link_libraries(mnist_simple_mlnn_app
 			logger
     		configuration
 	        types
@@ -98,10 +101,10 @@ if(${BUILD_MNIST_MLP_APP})
 	        ${Boost_LIBRARIES}
 	        )
         if(OpenBLAS_FOUND)
-                target_link_libraries(mnist_simple_mlp_app  ${OpenBLAS_LIB} )
+                target_link_libraries(mnist_simple_mlnn_app  ${OpenBLAS_LIB} )
         endif(OpenBLAS_FOUND)
 
         # install test to bin directory
-        install(TARGETS mnist_simple_mlp_app RUNTIME DESTINATION bin)
+        install(TARGETS mnist_simple_mlnn_app RUNTIME DESTINATION bin)
 
 endif(${BUILD_MNIST_MLP_APP})
