Refactor in progress - template nn and layers, unit tests of forward and backward pass of linear layer

--- a/src/mlnn/CMakeLists.txt
+++ b/src/mlnn/CMakeLists.txt
@@ -44,49 +44,42 @@ install(FILES
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 install(FILES MultiLayerNeuralNetwork.hpp DESTINATION include/mlnn)
 
-
-# Create MLNN shared library using all cpp files.
-FILE(GLOB mlnn_SRC 
-	MultiLayerNeuralNetwork.hpp
-	MultiLayerNeuralNetwork.cpp
-	layer/Layer.hpp
-	layer/Layer.cpp
-	layer/LayerTypes.hpp
-	activation_function/ELU.hpp
-	activation_function/ReLU.hpp
-	activation_function/Sigmoid.hpp
-	activation_function/*.cpp
-	convolution/Convolution.hpp
-	convolution/Padding.hpp
-	convolution/Pooling.hpp
-	convolution/*.cpp
-	cost_function/Regression.hpp
-	cost_function/Softmax.hpp
-	cost_function/*.cpp
-	fully_connected/Identity.hpp
-	fully_connected/Linear.hpp
-	fully_connected/SparseLinear.hpp
-	fully_connected/*.cpp
-	regularisation/Dropout.hpp
-	regularisation/*.cpp)
-	
-add_library(mlnn SHARED
-	${mlnn_SRC}
-	)
-
-# Link MLNN with required libraries. 
-target_link_libraries(mlnn
-	types
-	)
-if(OpenBLAS_FOUND)
-	target_link_libraries(mlnn  ${OpenBLAS_LIB} )
-endif(OpenBLAS_FOUND)
+## Create MLNN shared library using all cpp files.
+#FILE(GLOB mlnn_SRC 
+#	MultiLayerNeuralNetwork.hpp
+#	layer/Layer.hpp
+#	layer/LayerTypes.hpp
+#	activation_function/ELU.hpp
+#	activation_function/ReLU.hpp
+#	activation_function/Sigmoid.hpp
+#	convolution/Convolution.hpp
+#	convolution/Padding.hpp
+#	convolution/Pooling.hpp
+#	cost_function/Regression.hpp
+#	cost_function/Softmax.hpp
+#	fully_connected/Identity.hpp
+#	fully_connected/Linear.hpp
+#	fully_connected/SparseLinear.hpp
+#	regularisation/Dropout.hpp
+#	)
+#	
+#add_library(mlnn SHARED
+#	${mlnn_SRC}
+#	)
+#
+## Link MLNN with required libraries. 
+#target_link_libraries(mlnn
+#	types
+#	)
+#if(OpenBLAS_FOUND)
+#	target_link_libraries(mlnn  ${OpenBLAS_LIB} )
+#endif(OpenBLAS_FOUND)
 
 # Add to variable storing all libraries/targets.
-set(MIAlgorithms_LIBRARIES ${MIAlgorithms_LIBRARIES} "mlnn" CACHE INTERNAL "" FORCE)
+#set(MIAlgorithms_LIBRARIES ${MIAlgorithms_LIBRARIES} "mlnn" CACHE INTERNAL "" FORCE)
 
 # Install target library.
-install(TARGETS mlnn LIBRARY DESTINATION lib ARCHIVE DESTINATION lib RUNTIME DESTINATION bin)
+#install(TARGETS mlnn LIBRARY DESTINATION lib ARCHIVE DESTINATION lib RUNTIME DESTINATION bin)
 
 # =======================================================================
 # Build nn tests
@@ -106,3 +99,9 @@ if(GTEST_FOUND AND BUILD_UNIT_TESTS)
 
 endif(GTEST_FOUND AND BUILD_UNIT_TESTS)
 
+# =======================================================================
+# Add subdirectories
+# =======================================================================
+
+
+add_subdirectory(fully_connected)
