Cmake missing files fixes

--- a/src/loss/CMakeLists.txt
+++ b/src/loss/CMakeLists.txt
@@ -5,6 +5,7 @@ install(FILES
 	Loss.hpp
 	CrossEntropyLoss.hpp
 	SquaredErrorLoss.hpp
+	LogLikelihoodLoss.hpp
 	LossTypes.hpp
 	DESTINATION include/loss)
 
