--- a/src/optimization/CMakeLists.txt
+++ b/src/optimization/CMakeLists.txt
@@ -9,6 +9,7 @@ install(FILES
 	Momentum.hpp
 	OptimizationFunction.hpp
 	RMSProp.hpp
+	OptimizationFunctionTypes.hpp
 	DESTINATION include/optimization)
 
 
