--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,17 @@ matrix:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
           packages: ['libboost-all-dev', 'libeigen3-dev', 'libarmadillo-dev', 'libhdf5-dev']
 
+# Install gTesest.
+install:
+  # Fix gTest problem with symbolic links 
+  - DIR=$(pwd)
+  - sudo apt-get install libgtest-dev
+  - cd /usr/src/gtest
+  - sudo cmake CMakeLists.txt
+  - sudo make
+  - sudo cp *.a /usr/lib
+  - cd $DIR
+
 # Configure cmake and prepare installation dir.
 before_script:
   # Make mic output
@@ -107,25 +118,6 @@ before_script:
   - cmake .. -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR/../mic/
 
 # Build and install.
-script:
-  - make install VERBOSE=1
-
-
-install:
-  # Fix GTest problem with symbolic links 
-  - DIR=$(pwd)
-  - sudo apt-get install libgtest-dev
-  - cd /usr/src/gtest
-  - sudo cmake CMakeLists.txt
-  - sudo make
-  - sudo cp *.a /usr/lib
-  - cd $DIR
-
-before_script:
-  - mkdir build
-  - cd build
-  - cmake ..
-
 script:
   - make install VERBOSE=1
   - src/types2/matrixTestsRunner
